# Transfer-Learning-Framework

./: .gitignore  .pre-commit-config.yaml  README.md  SAFETY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
demo/: app.py
notebooks/: demo.ipynb
scripts/: demo.py
src/: __init__.py  cli.py
src/metrics/: evaluation.py
src/train/: __init__.py  trainer.py
src/utils/: core.py
tests/: test_framework.py
